force-app/main/default/objects/Compensation__c/fields/Contact_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Compensation__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>