force-app/main/default/objects/Compensation__c/recordTypes/Research.recordType-meta.xml
<RecordType>
    <fullName>Research</fullName>
    <active>true</active>
    <label>Research</label>
</RecordType>