force-app/main/default/objects/Compensation__c/recordTypes/Study.recordType-meta.xml
<RecordType>
    <fullName>Study</fullName>
    <active>true</active>
    <label>Study</label>
</RecordType>