force-app/main/default/objects/Compensation__c/validationRules/Ordered_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordered_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start-Date must be less than or equal to the End-Date</errorMessage>
</ValidationRule>