force-app/main/default/objects/Compensation__c/validationRules/Other_TextArea_Enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_TextArea_Enabled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT(ISPICKVAL(Job_Category__c, &quot;Other&quot;)),  
     NOT(ISBLANK(Other_Details__c))
   )</errorConditionFormula>
    <errorDisplayField>Other_Details__c</errorDisplayField>
    <errorMessage>You are only allowed to write here if the selected Job Category is &quot;Other&quot;.</errorMessage>
</ValidationRule>