force-app/main/default/objects/Compensation__c/validationRules/Over_5000_dolars.validationRule-meta.xml
<ValidationRule>
    <fullName>Over_5000_dolars</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &gt; 5000</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The amount can&#39;t be over $5,000.00 dolars</errorMessage>
</ValidationRule>